[package]
name = "zeta9"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.5.59", features = ["derive"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP client for relay (get_public_ip)
reqwest = { version = "0.13.2", default-features = false, features = ["default-tls"] }

# STUN codec for NAT detection
stun_codec_blazh = { version = "0.1.13" }
bytecodec = "0.4.15"

# Logging
log = "0.4"
simple_logger = "2.1"

# Random number generation for STUN server selection
rand = "0.8.5"