[package]
name = "zeta_network"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time", "io-std", "io-util", "sync"] } 
stun_codec_blazh = "0.1.13"
log = "0.4"
simple_logger = "2.1"
rand = "0.8.5"
bytecodec = "0.4.15"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
anyhow = "1.0.102"
bincode = "1"
stunclient = { version = "0.4.2", default-features = false, features = ["async"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tokio-rusqlite = "0.5"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
hex = "0.4.3"
sha2 = "0.11.0"

# Lightning
lightning = "0.1"

# Bitcoin
bitcoin = "0.31"
bdk = "0.30.2" # wallet + broadcast

# Autres
esplora-client = "0.7"